[gd_scene load_steps=7 format=3 uid="uid://b0lo58cyqa73m"]

[ext_resource type="Script" uid="uid://c0mva1ej8s5oo" path="res://Script/Menu/friend_button.gd" id="1_bk7tx"]
[ext_resource type="Shader" uid="uid://cuekut0h7m45o" path="res://Assets/2D/Shader/Clip.tres" id="2_h6e64"]
[ext_resource type="Texture2D" uid="uid://crafwjl66npwg" path="res://icon.svg" id="4_lc80y"]

[sub_resource type="Gradient" id="Gradient_ayx2t"]
offsets = PackedFloat32Array(0, 0.9319)
colors = PackedColorArray(1, 1, 1, 1, 0, 0, 0, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_orc58"]
gradient = SubResource("Gradient_ayx2t")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_bk7tx"]
resource_local_to_scene = true
shader = ExtResource("2_h6e64")
shader_parameter/GradientTexture = SubResource("GradientTexture1D_orc58")
shader_parameter/gradient_force = 0.425

[node name="FriendButton" type="Button"]
custom_minimum_size = Vector2(0, 40)
offset_right = 248.0
offset_bottom = 48.0
mouse_default_cursor_shape = 2
script = ExtResource("1_bk7tx")
metadata/_custom_type_script = "uid://b32k327cs6cov"

[node name="Avatar" type="TextureRect" parent="."]
modulate = Color(0.454902, 0.454902, 0.454902, 0.552941)
show_behind_parent = true
material = SubResource("ShaderMaterial_bk7tx")
layout_mode = 1
anchors_preset = -1
anchor_right = 0.419355
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("4_lc80y")
expand_mode = 3
stretch_mode = 6
metadata/_edit_use_anchors_ = true

[node name="margin" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 1
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 1
metadata/_edit_use_anchors_ = true

[node name="Status" type="Label" parent="margin"]
layout_mode = 2
size_flags_horizontal = 10
size_flags_vertical = 1
text = "offline"
horizontal_alignment = 2
vertical_alignment = 2

[node name="text" type="Control" parent="margin"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
mouse_filter = 2
metadata/_edit_use_anchors_ = true

[node name="Name" type="Label" parent="margin/text"]
modulate = Color(0.740127, 0.695999, 0.859514, 1)
layout_mode = 1
anchors_preset = -1
anchor_top = 0.5
anchor_right = 0.408333
anchor_bottom = 1.28
grow_vertical = 0
size_flags_vertical = 0
theme_type_variation = &"LabelMap"
theme_override_font_sizes/font_size = 26
text = "MapName"
metadata/_edit_use_anchors_ = true

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="pressed" from="." to="." method="_on_pressed"]
